tests/fail/struct-does-not-exist.virtue
a = new some_struct
a.some_field = 123

# error: struct does not exist
#  --> test.virtue:1:9
#    |
#  1 | a = new some_struct
#    |         ^^^^^^^^^^^
#
